--- a/src/components/todo/Todo.scss
+++ b/src/components/todo/Todo.scss
@@ -24,9 +24,10 @@
     }
 
     .add-todo-form {
-      //   border: 1px solid green;
       background-color: var(--bg-2);
       padding: 15px 10px;
+      border-radius: 10px;
+
       form {
         display: flex;
         justify-content: space-between;
@@ -131,6 +132,28 @@
             }
           }
         }
+      }
+    }
+  }
+}
+
+// media query
+@media only screen and (max-width: 600px) {
+  form {
+    display: flex;
+    flex-direction: column;
+
+    .add-task-btn {
+      // align-self: flex-end;
+      width: 100%;
+      margin: 5px 0px;
+    }
+  }
+
+  .wrapper {
+    .todo-container {
+      .filter {
+        width: 100%;
       }
     }
   }
